--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "07-restserver",
+  "name": "restserver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node app"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
